# queremossaber

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  bucket-policy.json  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: build_container.yml  test.yml
locale/pt_BR/LC_MESSAGES/: django.po
web/: settings.py  settings_test.py  urls.py
web/foi_requests/: admin.py  apps.py  forms.py  models.py  querysets.py  urls.py  utils.py  views.py
web/foi_requests/fixtures/: load_public_bodies_and_esic.json  public_bodies_and_esics.json  sample_foi_requests.json
web/foi_requests/management/commands/: load_public_bodies_and_esics.py
web/foi_requests/migrations/: 0001_initial.py  0002_auto_20180328_1901.py  0003_auto_20180709_1644.py  0004_auto_20180709_1804.py  0005_add_message_contraint_to_avoid_rejections_without_message_20180709_1846.py  0006_auto_20180710_1228.py  0007_add_constraint_foi_requests_message_can_only_send_approved_messages_20180710_1228.py  0008_auto_20180717_1131.py  0009_extract_esic_from_publicbody_and_add_location_fields_to_it.py  0010_rename_message_title_to_summary.py  0011_add_can_publish_field_to_foi_request.py  0012_add_public_body_level.py  0013_auto_20190814_1521.py  0014_foirequest_esic_protocol_password.py
web/foi_requests/tests/: conftest.py  test_admin.py  test_commands.py  test_forms.py  test_models.py  test_utils.py  test_views.py
web/static/web/js/: web.js
web/static/web/styles/: main.scss
web/templates/: _search_request.html  base.html  faq.html  index.html
web/templates/foi_requests/: _load_selectize.html  _message_details.html  foi_request_new.html  foirequest_detail.html  index.html  message_new.html  publicbody_form.html
web/whoami/: apps.py  urls.py  views.py
web/whoami/tests/: test_view.py
