[tool.poetry]
name = "queremossaber"
version = "0.1.0"
description = ""
authors = ["Vitor Baptista <vitor@vitorbaptista.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
django = "^4.2.16"
django-widget-tweaks = "1.4.3"
django-environ = "0.11.2"
django-storages = {extras = ["s3"], version = "^1.14.4"}
raven = "6.10.0"
psycopg2-binary = "^2.9.10"
libsass = "0.18.0"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
django-livesync = "0.5"
honcho = "1.0.1"
pre-commit = "^3.8.0"
pytest-django = "^4.9.0"
watchdog = "2.2.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings_test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
