[tool.poetry]
name = "queremossaber"
version = "0.1.0"
description = ""
authors = ["Vitor Baptista <vitor@vitorbaptista.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^5.1.8"
django-widget-tweaks = "^1.5.0"
django-environ = "0.11.2"
django-storages = {extras = ["s3"], version = "^1.14.4"}
raven = "6.10.0"
psycopg2-binary = "^2.9.10"
libsass = "^0.23.0"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"
sentry-sdk = {extras = ["django"], version = "^2.19.2"}

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
django-livesync = "0.5"
honcho = "^2.0.0"
pre-commit = "^4.0.1"
pytest-django = "^4.9.0"
watchdog = "^6.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings_test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
